@@ -1,44 +1,63 @@
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import student.BoardGame;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import student.Planner;
-import student.IPlanner;
 import student.GameData;
+import student.IPlanner;
+import student.Planner;
 
+import java.util.*;
+import java.util.stream.Collectors;
 
-/**
- * JUnit test for the Planner class.
- * 
- * Just a sample test to get you started, also using
- * setup to help out. 
- */
+import static org.junit.jupiter.api.Assertions.*;
+
 public class TestPlanner {
-    static Set<BoardGame> games;
+    private Set<BoardGame> gameSet;
+    private Planner planner;
 
-    @BeforeAll
-    public static void setup() {
-        games = new HashSet<>();
-        games.add(new BoardGame("17 days", 6, 1, 8, 70, 70, 9.0, 600, 9.0, 2005));
-        games.add(new BoardGame("Chess", 7, 2, 2, 10, 20, 10.0, 700, 10.0, 2006));
-        games.add(new BoardGame("Go", 1, 2, 5, 30, 30, 8.0, 100, 7.5, 2000));
-        games.add(new BoardGame("Go Fish", 2, 2, 10, 20, 120, 3.0, 200, 6.5, 2001));
-        games.add(new BoardGame("golang", 4, 2, 7, 50, 55, 7.0, 400, 9.5, 2003));
-        games.add(new BoardGame("GoRami", 3, 6, 6, 40, 42, 5.0, 300, 8.5, 2002));
-        games.add(new BoardGame("Monopoly", 8, 6, 10, 20, 1000, 1.0, 800, 5.0, 2007));
-        games.add(new BoardGame("Tucano", 5, 10, 20, 60, 90, 6.0, 500, 8.0, 2004));
+    @BeforeEach
+    public void setUp() {
+        gameSet = new HashSet<>();
+        gameSet.add(new BoardGame("Catan", 7, 1, 4, 60, 90, 2.5, 100, 8.1, 1995));
+        gameSet.add(new BoardGame("Terraforming Mars", 8, 1, 5, 90, 120, 3.2, 200, 8.5, 2016));
+        gameSet.add(new BoardGame("Gloomhaven", 8, 1, 4, 120, 150, 3.8, 300, 9.0, 2017));
+        planner = new Planner(gameSet);
     }
 
-     @Test
-    public void testFilterName() {
-        IPlanner planner = new Planner(games);
-        List<BoardGame> filtered = planner.filter("name == Go").toList();
-        assertEquals(1, filtered.size());
-        assertEquals("Go", filtered.get(0).getName());
+    @Test
+    public void testFilterByExactName() {
+        List<BoardGame> result = planner.filter("name == Catan").collect(Collectors.toList());
+        assertEquals(1, result.size());
+        assertEquals("Catan", result.get(0).getName());
     }
-    
+
+    @Test
+    public void testSortByRatingDescending() {
+        List<BoardGame> result = planner.filter("", GameData.RATING, false).collect(Collectors.toList());
+        assertEquals("Gloomhaven", result.get(0).getName());
+        assertEquals("Terraforming Mars", result.get(1).getName());
+        assertEquals("Catan", result.get(2).getName());
+    }
+
+    @Test
+    public void testSortByNameAscending() {
+        List<BoardGame> result = planner.filter("", GameData.NAME, true).collect(Collectors.toList());
+        assertEquals("Catan", result.get(0).getName());
+        assertEquals("Gloomhaven", result.get(1).getName());
+        assertEquals("Terraforming Mars", result.get(2).getName());
+    }
+
+
+    @Test
+    public void testFilterNoMatches() {
+        assertNull(planner.filter("name == NonExistentGame", GameData.RATING, true));
+    }
+
+    @Test
+    public void testReset() {
+        planner.filter("name == Catan");
+        planner.reset();
+        List<BoardGame> result = planner.getCurList().collect(Collectors.toList());
+        assertEquals(3, result.size());
+    }
 
 }
